# InKS

./: CMakeLists.txt  README.md
cmake/: FindISL.cmake
example/: CMakeLists.txt  array2d.hpp  example_1.cpp  example_2.cpp  heat_equation.ikf  heat_equation_inf.ikf  loop_option.iof  main.cpp  sched.hpp  sched_loop.hpp
include/: InKSArray.hpp  InKSBuffer.hpp  InKSBuffer_C.h
src/: CMakeLists.txt  automatic.cpp  automatic.hpp  const_globals.hpp  globals.hpp  isl_cpp_type.hpp  isl_processing.cpp  isl_processing.hpp  isl_utils.cpp  isl_utils.hpp  main.cpp  main_test.cpp  parser.y  scanner.lex  utils.cpp  utils.hpp
src/DD/: DD.cpp  DD.hpp  DD_Block_t.cpp  DD_Block_t.hpp  DD_Code_t.cpp  DD_Code_t.hpp  DD_Gen_t.cpp  DD_Gen_t.hpp  V_DD_Block_t.cpp  V_DD_Block_t.hpp  dd_parser.y  dd_scanner.lex
src/DD/DD_Lines/: DD_Auto_t.cpp  DD_Auto_t.hpp  DD_Copy_t.cpp  DD_Copy_t.hpp  DD_Decl_t.cpp  DD_Decl_t.hpp  DD_Dom_t.hpp  DD_For_t.cpp  DD_For_t.hpp  DD_Free.hpp  DD_Line_t.hpp  DD_Map_t.cpp  DD_Map_t.hpp  DD_Mem_t.cpp  DD_Mem_t.hpp  DD_OMP_Parallel_Region_t.hpp  DD_Param_t.cpp  DD_Param_t.hpp  DD_Unmap_t.cpp  DD_Unmap_t.hpp  DD_Update_t.cpp  DD_Update_t.hpp
src/DD/DD_Lines/Combo/: DD_Amap_t.hpp  DD_Combo_t.hpp  DD_Valloc_t.hpp  DD_Vamap_t.hpp
src/DD/DD_Lines/DDFor_utils/: V_DDForNamedVar.cpp  V_DDForNamedVar.hpp
src/DD/DD_Lines/DDFor_utils/Options/: DDForOption_t.hpp  DDForOptions_t.cpp  DDForOptions_t.hpp  OMP_For_option_t.cpp  OMP_For_option_t.hpp  OMP_TaskLoop_option_t.cpp  OMP_TaskLoop_option_t.hpp
src/DD/Scope/: DD_Scope_t.cpp  DD_Scope_t.hpp  Modification_t.cpp  Modification_t.hpp  Scope_exception_t.hpp  Time_Event_t.cpp  Time_Event_t.hpp  V_Modification_t.cpp  V_Modification_t.hpp
src/Function_t/: Array.hpp  Array_Map.hpp  Dependence_t.hpp  Function_Map.hpp  Function_application_t.hpp  Function_t.hpp  Generate_t.hpp  List_t.hpp  V_Dependence_t.hpp  V_Function_application_t.hpp  array.cpp  array_map.cpp  dependence.cpp  function.cpp  function_application.cpp  function_map.cpp  generate.cpp  list.cpp  v_dependence.cpp  v_function_application.cpp
src/Implem/: IO_t.cpp  IO_t.hpp  Implem_t.cpp  Implem_t.hpp  Include_t.hpp  Input_t.cpp  Input_t.hpp  V_Code_t.cpp  V_Code_t.hpp  V_Declaration_t.cpp  V_Declaration_t.hpp  V_IO_t.cpp  V_IO_t.hpp  include_t.cpp
src/Implem/Codes/: Auto_buffer_t.cpp  Auto_buffer_t.hpp  Block_t.cpp  Block_t.hpp  Buffer_class_t.cpp  Buffer_class_t.hpp  Buffer_t.cpp  Buffer_t.hpp  Code_t.hpp  Delete_buffer_t.cpp  Delete_buffer_t.hpp  Exit_t.cpp  Exit_t.hpp  For_t.cpp  For_t.hpp  Function_call_t.cpp  Function_call_t.hpp  If_t.cpp  If_t.hpp  Mult_array_t.cpp  Mult_array_t.hpp  OMP_Parallel_Region_t.cpp  OMP_Parallel_Region_t.hpp  Variable_t.cpp  Variable_t.hpp
src/Implem/Declarations/: Auto_buffer_decl_t.cpp  Auto_buffer_decl_t.hpp  Buffer_class_decl_t.cpp  Buffer_class_decl_t.hpp  Declaration_t.hpp  Function_Decl_t.cpp  Function_Decl_t.hpp
src/Polyhedral_t/: Constraint_t.hpp  Equality_t.hpp  Expr_t.hpp  Inequality_t.hpp  List_constraints_t.cpp  List_constraints_t.hpp  List_named_poly_t.cpp  List_named_poly_t.hpp  List_var_t.cpp  List_var_t.hpp  Minus_t.hpp  Modulo_t.cpp  Modulo_t.hpp  Mult_t.hpp  Named_Poly_t.cpp  Named_Poly_t.hpp  Neg_t.hpp  Nombre_t.hpp  Plus_t.hpp  Point_t.hpp  Poly_Exception_t.hpp  Poly_scope_t.hpp  Reference_t.cpp  Reference_t.hpp  Set_Poly_t.hpp  Union_Poly_t.hpp  Var_t.hpp  equality.cpp  inequality.cpp  point.cpp  union_poly.cpp  var.cpp
